# pre-commit-hub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pre_commit_hook_index/: __init__.py  __main__.py  cli.py  models.py  repositories.yaml
src/pre_commit_hook_index/commands/: add.py  build_index.py  remove.py  search.py
src/pre_commit_hook_index/tests/: test_add.py  test_remove.py
src/pre_commit_hub/: __main__.py  cli.py  console.py  repositories.yaml
src/pre_commit_hub/commands/: _git.py  _github.py  add.py  build_index.py  remove.py  search.py
src/pre_commit_hub/tests/: test_remove.py
tests/: test_add.py
website/: .env  package-lock.json  package.json  tsconfig.json
website/prisma/: schema.prisma
website/src/: prisma.ts
website/src/app/: layout.tsx  page.tsx
website/src/app/api/repo/: route.ts
website/src/app/browse/: RepoSearch.tsx  page.tsx
