[project]
name = "pre-commit-hook-index"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "itsjohncs", email = "johnsullivan.pem@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "pydantic>=2.8.2",
    "thefuzz>=0.22.1",
    "pytest>=8.3.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"pre-commit-hook-index" = "pre_commit_hook_index:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pre_commit_hook_index"]

[tool.pyright]
venvPath = "."
venv = ".venv"
